# hicon

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md
benches/: throughput.rs
src/: lib.rs  main.rs  node.rs
src/ccc/: mod.rs  pbft.rs
src/ccr/: log.rs  mod.rs  raft.rs
src/consensus/: mod.rs
src/crypto/: mod.rs  post_quantum.rs
src/metrics/: collector.rs  mod.rs
src/network/: mod.rs  transport.rs
src/sharding/: manager.rs  mod.rs
