[package]
name = "hybridconsensus"
version = "0.1.0"
edition = "2021"
authors = ["Oscar Valois <osvaloismtz@gmail.com>"]
description = "A high-performance hybrid consensus algorithm implementation"

[dependencies]
async-trait = "0.1.68"
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
blake3 = "1.3"
ed25519-dalek = "1.0"
rayon = "1.7"
dashmap = "5.4"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"

[dev-dependencies]
criterion = "0.4"
proptest = "1.1"

[[bench]]
name = "throughput"
harness = false